Added the groups api in swagger
